--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="login.html">Login</a>
+          <a class="nav-link" href="login">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="signup.html">Signup</a>
+          <a class="nav-link" href="signup">Signup</a>
         </li>
 
 
