--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
       <button type="submit" name="submit" class="btn btn-primary">Submit</button>
             
 
-			<a href="signup.html">Click to Signup</a><br><br>
+			<a href="signup">Click to Signup</a><br><br>
 		</form>
       </center>
 	</div>
