--- a/signup.html
+++ b/signup.html
@@ -113,7 +113,7 @@
                 <input class="btn btn-primary btn-lg" type="submit" name="submit" value="signup" /><br><br>
               </div>
               <div class="col-lg-6 login-btm login-button">
-              <a href="login.html"> <button type="button" name="login" class="btn btn-outline-primary">Login</button></a>
+              <a href="login"> <button type="button" name="login" class="btn btn-outline-primary">Login</button></a>
               </div>
 
             </form>
