--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
   <br><br><br><br><br><br>
 <div class="container mt-3">
 <center>
-		<form action="login.php" method="post">
+		<form  method="post">
     <h2>login</h2>
     <div class="mb-3 mt-3">
 			   User name : <input type="text" name="uname"><br><br>
